# advent-of-code-2025

./: .env.example  .gitignore  DEPLOYMENT.md  LICENSE  Makefile  README.md  build.sh  pyproject.toml  render.yaml
.github/workflows/: README.md  build.yml
solutions/day_01/: README.md  __init__.py  solution.py
solutions/day_02/: README.md  __init__.py  solution.py
solutions/day_03/: README.md  __init__.py  solution.py
solutions/day_04/: README.md  __init__.py  solution.py
solutions/day_05/: README.md  __init__.py  solution.py
src/aoc2025/: api.py  cli.py  config.py  models.py  scaffold.py
src/aoc2025/web/: __init__.py  asgi.py  manage.py  settings.py  urls.py  wsgi.py
src/aoc2025/web/showcase/: __init__.py  apps.py  urls.py  views.py
src/aoc2025/web/templates/: base.html
src/aoc2025/web/templates/showcase/: day_detail.html  index.html
