[project]
name = "aoc2025"
version = "0.1.0"
description = "Kenneth's Advent of Code 2025 Toolkit™"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "django>=5.0.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
    "gunicorn>=23.0.0",
    "whitenoise>=6.11.0",
]

[project.optional-dependencies]
dev = [
    "pyright>=1.1.0",
    "black>=24.0.0",
    "ruff>=0.8.0",
]

[project.scripts]
aoc = "aoc2025.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aoc2025"]

[tool.pyright]
include = ["src", "solutions"]
exclude = ["**/__pycache__", ".venv", "build", "dist", "**/migrations", "**/web/showcase/apps.py"]
typeCheckingMode = "strict"
pythonVersion = "3.12"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportAssignmentType = false
reportUnnecessaryComparison = false
reportUnnecessaryCast = false

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.git
  | \.venv
  | build
  | dist
  | migrations
)/
'''

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
    "migrations",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "DJ",  # flake8-django
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
